Fix bullet overhang on Safari iOS mobile
Use margin-left instead of text-indent hack for mobile list styling.
The previous approach with list-style-position: inside and negative
text-indent rendered inconsistently on Safari iOS.

--- a/_sass/overrides.sass
+++ b/_sass/overrides.sass
@@ -12,10 +12,7 @@ ul
 
 @media (max-width: $mini-breakpoint)
   ol, ul
-    list-style-position: inside
-    li
-      text-indent: -1.5em
-      padding-left: 1.5em
+    margin-left: 1.5em
 
 code
   margin: 0
